<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Zarkoff Scope</string>
    <string name="action_settings">Settings</string>
    <string name="Aries">Aries</string>
    <string name="Taurus">Taurus</string>
    <string name="Gemini">Gemini</string>
    <string name="Cancer">Cancer</string>
    <string name="Leo">Leo</string>
    <string name="Virgo">Virgo</string>
    <string name="Libra">Libra</string>
    <string name="Scorpio">Scorpio</string>
    <string name="Sagittarius">Sagittarius</string>
    <string name="Capricorn">Capricorn</string>
    <string name="Aquarius">Aquarius</string>
    <string name="Pisces">Pisces</string>
    <string name="menu_about">About</string>
    <string name="dialog_About">This app will give you information on your chosen zodiac it for the current date</string>
    <string name="dialog_About_OK_btn">Ok</string>

    <string name="menu_help">Help</string>
    <string name="mc_OutputScrn">Mondays Child</string>
    <string name="mc_SavingDataOutput">Mondays Child Preferences</string>
    <string name="my_favortie_city">My Favorite City</string>
    <string name="add_vote">Click to Add A Vote</string>
    <string name="hint">enter bunny name here</string>
    <string name="mBio">Biorhythms</string>
    <string name="Map">Map</string>
    <string name="mMap">Map</string>
    <string name="mAccel">Favorite City</string>
    <string name="dbGrid">DB VIEW</string>

    <string name="title_section1">Threads</string>
    <string name="title_section2">AsyncTask</string>
    <string name="title_section3">Async Query</string>
    <string name="add_dot">Add blue dot</string>
    <string name="clear_dots">Clear dots</string>
    <string name="translate">Translate Dots</string>
    <string name="start_activity">Passing to Activity</string>
    <string name="title_activity_receiving">Receiving Activity</string>
    <string name="title_section4">Object Passing</string>
    <string name="start_intent_service">Passing to Intent Service</string>
    <string name="start_receiver">Passing To Receiver</string>
    <string name="coordinate">[X= %1$d Y= %2$d]</string>
    <string name="start">Start</string>
</resources>
